<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom"
        android:title="@string/recyclerview_demo_menu_edit_item" />

    <item
        android:id="@+id/cancel"
        android:icon="@drawable/ic_baseline_close_24"
        app:showAsAction="ifRoom"
        android:title="@string/recyclerview_demo_menu_cancel"
        android:visible="false" />

    <item
        android:id="@+id/add_item"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="ifRoom"
        android:title="@string/recyclerview_demo_menu_add_item" />

    <item
        android:id="@+id/change_to_grid"
        android:icon="@drawable/ic_baseline_view_module_24"
        app:showAsAction="ifRoom"
        android:title="@string/recyclerview_demo_change_to_grid" />

    <item
        android:id="@+id/change_to_list"
        android:icon="@drawable/ic_baseline_view_list_24"
        app:showAsAction="ifRoom"
        android:title="@string/recyclerview_demo_change_to_list" />


</menu>